--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="logo">
-        <a href="/Index.html"><img src="/images/logo.png" alt="logo" /></a>
+        <a href="/index.html"><img src="/images/logo.png" alt="logo" /></a>
       </div>
 
       <div class="dropdown">
